Fix issue where talks were rendered behind the banner

--- a/src/components/Talks/styles.css
+++ b/src/components/Talks/styles.css
@@ -3,6 +3,7 @@
 
 .content {
   justify-content: center;
+  z-index: 300;
 }
 
 @media (max-width: 767px) {
